// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConventionModal /> should render a button 1`] = `
.c1 {
  width: 2.5rem;
  margin: 0 auto;
}

.c0 {
  background: transparent;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: inherit;
  color: inherit;
}

<div>
  <li
    class="categories__list-item "
    icon="/static/assets/icons/chat.svg"
  >
    <button
      class="c0"
    >
      <img
        alt=""
        class="c1"
        src="/static/assets/icons/book_web.svg"
      />
      <h3>
        Votre convention collective
      </h3>
      <p>
        Trouvez simplement la convention collective dont vous dépendez
      </p>
    </button>
  </li>
</div>
`;

exports[`<ConventionModal /> should render a popup when click on button 1`] = `
.c1 {
  width: 2.5rem;
  margin: 0 auto;
}

.c4 li[role="option"]:nth-child(2n + 1) {
  background: #f7f7f7;
}

.c3 {
  margin-top: 10px;
}

.c2 {
  color: #000;
  font-size: 1.2em;
  margin-top: 20px;
}

.c5 {
  color: #666;
  font-size: 1em;
  font-weight: bold;
  margin: 20px 0 10px 0;
}

.c0 {
  background: transparent;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: inherit;
  color: inherit;
}

<body>
  <div
    aria-hidden="true"
  >
    <li
      class="categories__list-item "
      icon="/static/assets/icons/chat.svg"
    >
      <button
        class="c0"
      >
        <img
          alt=""
          class="c1"
          src="/static/assets/icons/book_web.svg"
        />
        <h3>
          Votre convention collective
        </h3>
        <p>
          Trouvez simplement la convention collective dont vous dépendez
        </p>
      </button>
    </li>
  </div>
  <reach-portal>
    <div
      data-reach-dialog-overlay="true"
      style="background: rgba(0, 0, 0, 0.5);"
    >
      <div
        aria-modal="true"
        data-reach-dialog-content="true"
        style="border-radius: 3px; margin: 5vh auto;"
        tabindex="-1"
      >
        <form>
          <h2>
            Trouvez votre convention collective
          </h2>
          <div>
            <h3
              class="c2"
            >
              Recherche par nom ou par identifiant
            </h3>
            Saisissez l'identifiant de convention collective (IDCC) ou le nom de la branche :
            <div
              class="c3"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="react-autowhatever-1"
                role="combobox"
                style="position: relative;"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-autowhatever-1"
                  autocomplete="off"
                  class="full-width"
                  name="query"
                  placeholder="Convention collective"
                  type="search"
                  value=""
                />
                <div
                  class="c4"
                  id="react-autowhatever-1"
                  role="listbox"
                />
              </div>
            </div>
            <div
              class="c5"
            >
              Comment trouver ma convention collective ?
            </div>
            <ul>
              <li>
                Elle doit figurer au 
                <b>
                  bulletin de paie
                </b>
                , et sur une notice remise à l'embauche ou 
                <b>
                  sur le contrat de travail
                </b>
              </li>
              <li>
                Sur l'affichage obligatoire dans l'entreprise (avec les modalités de consultation en entreprise)
              </li>
            </ul>
            <div
              class="c5"
            >
              Quelle est la convention collective applicable ?
            </div>
            <ul>
              <li>
                En principe celle relevant de l'activité principale dans l'entreprise pour les cas les plus simples.
              </li>
            </ul>
          </div>
        </form>
        <form>
          <h3
            class="c2"
          >
            Recherche par SIRET
          </h3>
          Saisissez le numéro de SIRET de votre entreprise afin d'obtenir votre convention collective :
          <div
            class="c3"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="react-autowhatever-1"
              role="combobox"
              style="position: relative;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-autowhatever-1"
                autocomplete="off"
                class="full-width"
                name="query"
                placeholder="Numéro de SIRET à 14 chiffres"
                type="search"
                value=""
              />
              <div
                class="c4"
                id="react-autowhatever-1"
                role="listbox"
              />
            </div>
            <p>
              <span>
                 
              </span>
            </p>
            <p
              style="font-style: italic;"
            >
              Vous pouvez chercher le SIRET de votre entreprise sur 
              <a
                href="https://entreprise.data.gouv.fr/"
              >
                entreprise.data.gouv.fr
              </a>
            </p>
          </div>
        </form>
      </div>
    </div>
  </reach-portal>
</body>
`;
